[FIX] web: Make placeholders more readable

--- a/addons/web/static/src/scss/bootstrap_overridden.scss
+++ b/addons/web/static/src/scss/bootstrap_overridden.scss
@@ -295,7 +295,7 @@ $badge-padding-y: 0.25em !default;
 $badge-padding-x: 0.82em !default;
 
 // Placeholder color
-$input-placeholder-color: $gray-300 !default;
+$input-placeholder-color: $gray-600 !default;
 
 // Card
 
